# nxp-uwb-ros2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  SCR.txt  package.xml
launch/: tdoa_controlee_1_launch.py  tdoa_controlee_2_launch.py  tdoa_controller_launch.py  tdoa_tag_launch.py  twr_initiator_launch.py  twr_responder_launch.py
scripts/: README.md  demo_control.py  gz_twr_point.py  ros_gz_twr_data_generator.py  run.sh  twr_point_publisher.py
src/: sr1xx_driver.c  sr1xx_driver.h  sr1xx_node.cpp
src/hal/: sr1xx-core.c  sr1xx-core.h  sr1xx-dev.h  sr1xx-range.c  sr1xx-range.h  sr1xx-session.c  sr1xx-session.h  sr1xx-thread.c  sr1xx-thread.h  sr1xx.c  sr1xx.h  uci_protocol.c  uci_protocol.h
src/hal/linux/: parameters.c  parameters.h  sr1xx-dev.c  sr1xx-fwd.c  sr1xx-fwd.h
src/scripts/: generate_c_backend.py
standalone/: CMakeLists.txt  README.md  main.c
udev/: 99-srxxx.rules  README.md
